# libpca

./: .cproject  .gitignore  CHANGES.txt  COPYING  ChangeLog  Makefile.am  README  README.md  README.txt  configure.ac  install.sh  make_dist.sh  upload.sh
examples/: Makefile.am
examples/simple/: Makefile.am  pca_example.cpp  pca_results.eigval  pca_results.eigvalboot  pca_results.eigvec  pca_results.energy  pca_results.energyboot  pca_results.mean  pca_results.pca  pca_results.princomp  pca_results.sigma
include/: pca.h
m4/: ax_cxx_compile_stdcxx_11.m4  gr_armadillo.m4
src/: pca.cpp  utils.cpp
src/lib/: Makefile.am  pca.cpp  pca.h
test/: Makefile.am  test_pca.cpp  test_pca.h  test_utils.cpp  test_utils.h  unittest.hpp  utils.hpp
