# the library names to build
lib_LTLIBRARIES = libpca.la

libpca_la_LDFLAGS = -version-info 2:0:1 -no-undefined

# where to install the headers on the system
libpca_ladir = $(includedir)

# the list of header files that belong to the library (to be installed later)
libpca_la_HEADERS = \
pca.h

# the sources to add to the library and to add to the source distribution
libpca_la_SOURCES = \
pca.cpp \
utils.cpp
